--- a/.env
+++ b/.env
@@ -10,19 +10,19 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_PORT=3309
-DB_DATABASE=juego
+DB_PORT=3306
+DB_DATABASE=barquito2
 DB_USERNAME=root
 DB_PASSWORD=
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=sweetbeautyutt@gmail.com
-MAIL_PASSWORD=zgklrcfgdihbhysm
+MAIL_USERNAME=supermonkeyball.official@gmail.com
+MAIL_PASSWORD="vxgr uafh bnkk xyxi"
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=sweetbeautyutt@gmail.com
-MAIL_FROM_NAME="THE GAME"
+MAIL_FROM_ADDRESS=supermonkeyball.official@gmail.com
+MAIL_FROM_NAME="Barquito :D"
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
@@ -46,7 +46,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 PUSHER_APP_ID=123456
 PUSHER_APP_KEY=GoofNBCH
 PUSHER_APP_SECRET=stronfdff
-PUSHER_APP_HOST=127.0.0.1
+PUSHER_APP_HOST=192.168.1.75
 PUSHER_APP_CLUSTER=mt1
 
 
